# sarvam-ai-cookbook

./: .gitignore
examples/enterprise/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
examples/enterprise/.github/workflows/: ci.yml
examples/enterprise/core/: __init__.py  config.py  constants.py  exceptions.py  logging_config.py  middleware.py  models.py  sarvam_client.py  utils.py  validators.py
examples/enterprise/docker/: Dockerfile  docker-compose.yml
examples/enterprise/tests/: conftest.py  test_middleware.py  test_pii_masking.py  test_sarvam_client.py  test_usecases.py  test_utils.py  test_validators.py
examples/enterprise/usecases/: __init__.py
examples/enterprise/usecases/anganwadi_learning/: README.md  __init__.py  app.py  service.py
examples/enterprise/usecases/emergency_helpline_transcriber/: README.md  __init__.py  app.py  service.py
examples/enterprise/usecases/flood_cyclone_broadcaster/: README.md  __init__.py  app.py  service.py
examples/enterprise/usecases/it_support_helpdesk/: README.md  __init__.py  app.py  knowledge_base.py  service.py  ticket_manager.py
examples/enterprise/usecases/legal_aid_bot/: README.md  __init__.py  app.py  knowledge_base.py  service.py
examples/enterprise/usecases/mother_tongue_tutor/: README.md  __init__.py  app.py  service.py
examples/enterprise/usecases/regional_recipe_narrator/: README.md  __init__.py  app.py  service.py
examples/enterprise/usecases/rti_drafter/: README.md  __init__.py  app.py  service.py
examples/enterprise/usecases/rural_bank_onboarding/: README.md  app.py  (+2 more)
(+16 files in other folders)
